QtBeef/src/Qt/qevent.bf

class QTabletEvent : IQTabletEvent, IQSinglePointEvent, IQPointerEvent, IQInputEvent, IQEvent
{
	private QTabletEvent_Ptr ptr;
	public void* ObjectPtr => ptr.Ptr;
	public this(QTabletEvent_Ptr ptr)
	{
		this.ptr = ptr;
	}
	public this(QEvent_Type t, IQPointingDevice device, IQPointF pos, IQPointF globalPos, double pressure, float xTilt, float yTilt, float tangentialPressure, double rotation, float z, void* keyState, Qt_MouseButton button, void* buttons)
	{
		this.ptr = CQt.QTabletEvent_new(t, (.)device?.ObjectPtr, (.)pos?.ObjectPtr, (.)globalPos?.ObjectPtr, pressure, xTilt, yTilt, tangentialPressure, rotation, z, keyState, button, buttons);
	}
	public ~this()
	{
		CQt.QTabletEvent_Delete(this.ptr);
	}
	public QTabletEvent_Ptr Clone()
	{
		return QTabletEvent_Ptr(CQt.QTabletEvent_Clone((.)this.ptr.Ptr));
	}
	public QPoint_Ptr Pos()
	{
		return QPoint_Ptr(CQt.QTabletEvent_Pos((.)this.ptr.Ptr));
	}
	public QPoint_Ptr GlobalPos()
	{
		return QPoint_Ptr(CQt.QTabletEvent_GlobalPos((.)this.ptr.Ptr));
	}
	public QPointF_Ptr PosF()
	{
		return QPointF_Ptr(CQt.QTabletEvent_PosF((.)this.ptr.Ptr));
	}
	public QPointF_Ptr GlobalPosF()
	{
		return QPointF_Ptr(CQt.QTabletEvent_GlobalPosF((.)this.ptr.Ptr));
	}
	public c_int X()
	{
		return CQt.QTabletEvent_X((.)this.ptr.Ptr);
	}
	public c_int Y()
	{
		return CQt.QTabletEvent_Y((.)this.ptr.Ptr);
	}
	public c_int GlobalX()
	{
		return CQt.QTabletEvent_GlobalX((.)this.ptr.Ptr);
	}
	public c_int GlobalY()
	{
		return CQt.QTabletEvent_GlobalY((.)this.ptr.Ptr);
	}
	public double HiResGlobalX()
	{
		return CQt.QTabletEvent_HiResGlobalX((.)this.ptr.Ptr);
	}
	public double HiResGlobalY()
	{
		return CQt.QTabletEvent_HiResGlobalY((.)this.ptr.Ptr);
	}
	public c_longlong UniqueId()
	{
		return CQt.QTabletEvent_UniqueId((.)this.ptr.Ptr);
	}
	public double Pressure()
	{
		return CQt.QTabletEvent_Pressure((.)this.ptr.Ptr);
	}
	public double Rotation()
	{
		return CQt.QTabletEvent_Rotation((.)this.ptr.Ptr);
	}
	public double Z()
	{
		return CQt.QTabletEvent_Z((.)this.ptr.Ptr);
	}
	public double TangentialPressure()
	{
		return CQt.QTabletEvent_TangentialPressure((.)this.ptr.Ptr);
	}
	public double XTilt()
	{
		return CQt.QTabletEvent_XTilt((.)this.ptr.Ptr);
	}
	public double YTilt()
	{
		return CQt.QTabletEvent_YTilt((.)this.ptr.Ptr);
	}
	public Qt_MouseButton Button()
	{
		return CQt.QSinglePointEvent_Button((.)this.ptr.Ptr);
	}
	public void* Buttons()
	{
		return CQt.QSinglePointEvent_Buttons((.)this.ptr.Ptr);
	}
	public QPointF_Ptr Position()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_Position((.)this.ptr.Ptr));
	}
	public QPointF_Ptr ScenePosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_ScenePosition((.)this.ptr.Ptr));
	}
	public QPointF_Ptr GlobalPosition()
	{
		return QPointF_Ptr(CQt.QSinglePointEvent_GlobalPosition((.)this.ptr.Ptr));
	}
	public bool IsBeginEvent()
	{
		return CQt.QSinglePointEvent_IsBeginEvent((.)this.ptr.Ptr);
	}
	public bool IsUpdateEvent()
	{
		return CQt.QSinglePointEvent_IsUpdateEvent((.)this.ptr.Ptr);
	}
	public bool IsEndEvent()
	{
		return CQt.QSinglePointEvent_IsEndEvent((.)this.ptr.Ptr);
	}
	public QObject_Ptr ExclusivePointGrabber()
	{
		return QObject_Ptr(CQt.QSinglePointEvent_ExclusivePointGrabber((.)this.ptr.Ptr));
	}
	public void SetExclusivePointGrabber(IQObject exclusiveGrabber)
	{
		CQt.QSinglePointEvent_SetExclusivePointGrabber((.)this.ptr.Ptr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public QPointingDevice_Ptr PointingDevice()
	{
		return QPointingDevice_Ptr(CQt.QPointerEvent_PointingDevice((.)this.ptr.Ptr));
	}
	public QPointingDevice_PointerType PointerType()
	{
		return CQt.QPointerEvent_PointerType((.)this.ptr.Ptr);
	}
	public void SetTimestamp(c_ulonglong timestamp)
	{
		CQt.QPointerEvent_SetTimestamp((.)this.ptr.Ptr, timestamp);
	}
	public void* PointCount()
	{
		return CQt.QPointerEvent_PointCount((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr Point(void* i)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_Point((.)this.ptr.Ptr, i));
	}
	public void** Points()
	{
		return CQt.QPointerEvent_Points((.)this.ptr.Ptr);
	}
	public QEventPoint_Ptr PointById(c_int id)
	{
		return QEventPoint_Ptr(CQt.QPointerEvent_PointById((.)this.ptr.Ptr, id));
	}
	public bool AllPointsGrabbed()
	{
		return CQt.QPointerEvent_AllPointsGrabbed((.)this.ptr.Ptr);
	}
	public bool AllPointsAccepted()
	{
		return CQt.QPointerEvent_AllPointsAccepted((.)this.ptr.Ptr);
	}
	public void SetAccepted(bool accepted)
	{
		CQt.QPointerEvent_SetAccepted((.)this.ptr.Ptr, accepted);
	}
	public QObject_Ptr ExclusiveGrabber(IQEventPoint point)
	{
		return QObject_Ptr(CQt.QPointerEvent_ExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr));
	}
	public void SetExclusiveGrabber(IQEventPoint point, IQObject exclusiveGrabber)
	{
		CQt.QPointerEvent_SetExclusiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)exclusiveGrabber?.ObjectPtr);
	}
	public void ClearPassiveGrabbers(IQEventPoint point)
	{
		CQt.QPointerEvent_ClearPassiveGrabbers((.)this.ptr.Ptr, (.)point?.ObjectPtr);
	}
	public bool AddPassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_AddPassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public bool RemovePassiveGrabber(IQEventPoint point, IQObject grabber)
	{
		return CQt.QPointerEvent_RemovePassiveGrabber((.)this.ptr.Ptr, (.)point?.ObjectPtr, (.)grabber?.ObjectPtr);
	}
	public QInputDevice_Ptr Device()
	{
		return QInputDevice_Ptr(CQt.QInputEvent_Device((.)this.ptr.Ptr));
	}
	public QInputDevice_DeviceType DeviceType()
	{
		return CQt.QInputEvent_DeviceType((.)this.ptr.Ptr);
	}
	public void* Modifiers()
	{
		return CQt.QInputEvent_Modifiers((.)this.ptr.Ptr);
	}
	public void SetModifiers(void* modifiers)
	{
		CQt.QInputEvent_SetModifiers((.)this.ptr.Ptr, modifiers);
	}
	public c_ulonglong Timestamp()
	{
		return CQt.QInputEvent_Timestamp((.)this.ptr.Ptr);
	}
	public QEvent_Type Type()
	{
		return CQt.QEvent_Type((.)this.ptr.Ptr);
	}
	public bool Spontaneous()
	{
		return CQt.QEvent_Spontaneous((.)this.ptr.Ptr);
	}
	public bool IsAccepted()
	{
		return CQt.QEvent_IsAccepted((.)this.ptr.Ptr);
	}
	public void Accept()
	{
		CQt.QEvent_Accept((.)this.ptr.Ptr);
	}
	public void Ignore()
	{
		CQt.QEvent_Ignore((.)this.ptr.Ptr);
	}
	public bool IsInputEvent()
	{
		return CQt.QEvent_IsInputEvent((.)this.ptr.Ptr);
	}
	public bool IsPointerEvent()
	{
		return CQt.QEvent_IsPointerEvent((.)this.ptr.Ptr);
	}
	public bool IsSinglePointEvent()
	{
		return CQt.QEvent_IsSinglePointEvent((.)this.ptr.Ptr);
	}
	public c_int RegisterEventType()
	{
		return CQt.QEvent_RegisterEventType();
	}
	public c_int RegisterEventType1(c_int hint)
	{
		return CQt.QEvent_RegisterEventType1(hint);
	}
}
interface IQTabletEvent : IQtObjectInterface
{
}
// --------------------------------------------------------------
// QNativeGestureEvent
// --------------------------------------------------------------
[CRepr]
struct QNativeGestureEvent_Ptr
{
	public void* Ptr;
	public this(void* ptr)
	{
		this.Ptr = ptr;
	}
}
extension CQt
{
	[LinkName("QNativeGestureEvent_new")]
	public static extern QNativeGestureEvent_Ptr QNativeGestureEvent_new(Qt_NativeGestureType type, void** dev, void** localPos, void** scenePos, void** globalPos, double value, c_ulonglong sequenceId, c_ulonglong intArgument);
	[LinkName("QNativeGestureEvent_new2")]
	public static extern QNativeGestureEvent_Ptr QNativeGestureEvent_new2(Qt_NativeGestureType type, void** dev, c_int fingerCount, void** localPos, void** scenePos, void** globalPos, double value, void** delta);
	[LinkName("QNativeGestureEvent_new3")]
	public static extern QNativeGestureEvent_Ptr QNativeGestureEvent_new3(Qt_NativeGestureType type, void** dev, c_int fingerCount, void** localPos, void** scenePos, void** globalPos, double value, void** delta, c_ulonglong sequenceId);
	[LinkName("QNativeGestureEvent_Delete")]
	public static extern void QNativeGestureEvent_Delete(QNativeGestureEvent_Ptr self);
	[LinkName("QNativeGestureEvent_Clone")]
	public static extern void** QNativeGestureEvent_Clone(void* self);
	[LinkName("QNativeGestureEvent_GestureType")]
	public static extern Qt_NativeGestureType QNativeGestureEvent_GestureType(void* self);
	[LinkName("QNativeGestureEvent_FingerCount")]
	public static extern c_int QNativeGestureEvent_FingerCount(void* self);
	[LinkName("QNativeGestureEvent_Value")]
	public static extern double QNativeGestureEvent_Value(void* self);
	[LinkName("QNativeGestureEvent_Delta")]
	public static extern void* QNativeGestureEvent_Delta(void* self);
	[LinkName("QNativeGestureEvent_Pos")]
	public static extern void* QNativeGestureEvent_Pos(void* self);
	[LinkName("QNativeGestureEvent_GlobalPos")]
	public static extern void* QNativeGestureEvent_GlobalPos(void* self);
	[LinkName("QNativeGestureEvent_LocalPos")]
	public static extern void* QNativeGestureEvent_LocalPos(void* self);
	[LinkName("QNativeGestureEvent_WindowPos")]
	public static extern void* QNativeGestureEvent_WindowPos(void* self);
	[LinkName("QNativeGestureEvent_ScreenPos")]
	public static extern void* QNativeGestureEvent_ScreenPos(void* self);
}
